Introduce challenge and ownership in http api
